--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,55 @@
-body {
+/* Global styles */
+body, html {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  height: 100%; /* Aseguramos que ocupen todo el alto */
+  display: flex;
+  flex-direction: column;
+  font-family: 'Arial', sans-serif;
+  background-color: #918592 !important; /* Fondo gris claro */
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+#root {
+  display: flex;
+  flex-direction: column;
+  min-height: 100%; /* Ocupa todo el espacio disponible */
+}
+
+.App {
+  flex: 1; /* Aseguramos que el contenido ocupe el espacio restante */
+  display: flex;
+  flex-direction: column;
+}
+
+/* General container for the products */
+.product-grid {
+  flex: 1; /* Permitir que este contenedor ocupe el espacio necesario */
+  display: flex;
+  justify-content: center;
+  align-items: start; /* Alinear al inicio del contenedor */
+  padding: 20px;
+}
+
+/* NavBar adjustments */
+.navbar {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 10px 20px;
+  background-color: #1c1c1c;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  position: sticky; /* Para mantenerlo fijo en la parte superior */
+  top: 0;
+  z-index: 10;
+}
+
+/* Footer ajustes */
+.footer {
+  background-color: #1c1c1c; /* Fondo oscuro */
+  color: #fff;
+  padding: 20px 0;
+  text-align: center;
+  width: 100%;
+  margin-top: auto; /* Empuja el footer al final */
+  flex-shrink: 0; /* Evita que el footer colapse en altura */
 }
