--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,6 +1,6 @@
 .footer {
-    background-color: #333; /* Fondo oscuro */
-    color: #fff; /* Texto blanco */
+    background-color: #333; 
+    color: #fff; 
     padding: 20px 0;
     text-align: center;
     width: 100%;
@@ -31,7 +31,6 @@
     text-decoration: underline;
 }
 
-/* Evitar que el contenido empuje el footer */
 body, html {
     min-height: 100%;
     display: flex;
