--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -3,7 +3,7 @@
     align-items: center;
     justify-content: space-between;
     padding: 0 20px;
-    background-color: #1c1c1c; /* Un color oscuro elegante */
+    background-color: #1c1c1c; 
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
 
@@ -13,7 +13,7 @@
 }
 
 .navbar-logo {
-    height: 90px; /* Aumenta el tamaño del logo */
+    height: 90px; 
     margin-right: 15px;
     margin-top:35px;
 }
@@ -21,14 +21,14 @@
 .navbar-brand {
     display: flex;
     align-items: center;
-    font-size: 1.5rem; /* Ajusta el tamaño del texto */
+    font-size: 1.5rem; 
     text-decoration: none;
     color: white;
 }
 
 .navbar-nav {
     display: flex;
-    gap: 20px; /* Espacio entre las secciones */
+    gap: 20px; 
 }
 
 .nav-item {
